--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "framer-motion": "^10.12.4",
+    "js-cookie": "^3.0.5",
     "next": "12.2.4",
+    "next-router": "^1.3.6",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
